<resources>
    <string name="app_name">PregnencyApp</string>
    <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">UserName :</string>
    <string name="password">Password :</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_password">Enter Password</string>
    <string name="or">OR</string>
    <string name="profile">Profile</string>p
    <string name="logout">LogOut</string>
    <string name="map">Map</string>
    <string name="checklist">CheckList</string>
    <string name="share">Share</string>

    <!-- Menu Titles-->
    <string name="appointment_tracker">Appointment Tracker</string>
    <string name="belly_album">Belly Album</string>
    <string name="food">Diet/Food</string>
    <string name="health_program">Health Program</string>
    <string name="click_to_call">ClickToCall</string>
    <string name="forum">Forum/Communication</string>
    <string name="reward">Referal/Reward</string>
    <string name="more">More</string>








</resources>
